--- a/src/main/resources/assets/farmerstfc/lang/en_us.json
+++ b/src/main/resources/assets/farmerstfc/lang/en_us.json
@@ -2,5 +2,6 @@
   "farmerstfc.tab.name": "Farmers TFC",
   "block.farmerstfc.brown_mushroom_bunch": "Brown Mushroom Bunch",
   "block.farmerstfc.red_mushroom_bunch": "Red Mushroom Bunch",
-  "block.farmerstfc.pan": "Pan"
+  "block.farmerstfc.pan": "Pan",
+  "tfc.jei.skillet_heating": "Skillet Heating"
 }
