--- a/src/main/resources/assets/farmerstfc/lang/zh_cn.json
+++ b/src/main/resources/assets/farmerstfc/lang/zh_cn.json
@@ -2,5 +2,6 @@
   "farmerstfc.tab.name": "农夫群峦",
   "block.farmerstfc.brown_mushroom_bunch": "棕色蘑菇簇",
   "block.farmerstfc.red_mushroom_bunch": "红色蘑菇簇",
-  "block.farmerstfc.pan": "锅"
+  "block.farmerstfc.pan": "锅",
+  "tfc.jei.skillet_heating": "煎锅加热"
 }
